sumo/tests/sumo/errors/network/junction/root__junction#id__false2/errors.sumo
Error: Missing junction logic 'a'.
Quitting (on error).
